--- a/CPR_progress_monitoring_service/appsettings.json
+++ b/CPR_progress_monitoring_service/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CPR_progress_monitoring_service-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CPR_progress_monitoring_service-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=HUBSONPC\\SQLSERVER2019;Database=CPRMonitoringServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
       "LogLevel": {
