WebAPI - logging, registering, token generating endpoints created..

--- a/CPR_progress_monitoring_service/appsettings.json
+++ b/CPR_progress_monitoring_service/appsettings.json
@@ -1,21 +1,27 @@
 {
-  "ConnectionStrings": {
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CPR_progress_monitoring_service-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=HUBSONPC\\SQLSERVER2019;Database=CPRMonitoringServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-      "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CPR_progress_monitoring_service-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Server=HUBSONPC\\SQLSERVER2019;Database=CPRMonitoringServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-  "IdentityServer": {
-    "Clients": {
-      "CPR_progress_monitoring_service": {
-        "Profile": "IdentityServerSPA"
-      }
-    }
-  },
-"AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "IdentityServer": {
+        "Clients": {
+            "CPR_progress_monitoring_service": {
+                "Profile": "IdentityServerSPA"
+            }
+        }
+    },
+    "JWT": {
+        "key": "C1CF4B7DC4C4175B6618DE4F55CA4",
+        "Issuer": "CPR_progress_monitoring_service",
+        "Audience": "CPR_progress_monitoring_service_User",
+        "DurationInMinutes": 60
+    },
+    "AllowedHosts": "*"
 }
