--- a/CPR_progress_monitoring_service/Properties/launchSettings.json
+++ b/CPR_progress_monitoring_service/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -13,15 +13,19 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": true,
+      "jsWebView2Debugging": false
     },
     "CPR_progress_monitoring_service": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": false,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "jsWebView2Debugging": false
     }
   }
 }
