--- a/CPR_progress_monitoring_service/appsettings.Development.json
+++ b/CPR_progress_monitoring_service/appsettings.Development.json
@@ -1,14 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Information",
+                "System": "Information"
+            }
+        },
+        "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/log.txt",
+                    "rollingInterval": "Day"
+                }
+            }
+        ]
+    },
+    "IdentityServer": {
+        "Key": {
+            "Type": "Development"
+        }
     }
-  },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
-    }
-  }
 }
