--- a/CPR_progress_monitoring_service/appsettings.json
+++ b/CPR_progress_monitoring_service/appsettings.json
@@ -3,13 +3,6 @@
         //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CPR_progress_monitoring_service-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true",
         "DefaultConnection": "Server=HUBSONPC\\SQLSERVER2019;Database=CPRMonitoringServiceDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
     "IdentityServer": {
         "Clients": {
             "CPR_progress_monitoring_service": {
@@ -22,6 +15,26 @@
         "Issuer": "CPR_progress_monitoring_service",
         "Audience": "CPR_progress_monitoring_service_User",
         "DurationInMinutes": 60
+    },
+    "Serilog": {
+        "MinimumLevel": {
+            "Default": "Debug",
+            "Override": {
+                "Microsoft": "Information",
+                "System": "Information"
+            }
+        },
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+        "WriteTo": [
+            { "Name": "Console" },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "logs/log.txt",
+                    "rollingInterval": "Day"
+                }
+            }
+        ]
     },
     "AllowedHosts": "*"
 }
