Angular - login service implemented.

--- a/CPR_progress_monitoring_service/ClientApp/tsconfig.json
+++ b/CPR_progress_monitoring_service/ClientApp/tsconfig.json
@@ -1,6 +1,9 @@
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
+    "noImplicitAny": false,
+    "removeComments": false,
+    "noEmitOnError": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
